--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   
     <div class="container">
        
-        <div class="head_gro">
+        <!--<div class="head_gro">
         <h2 class="head_title">Investigator</h2>
         <p class="head_down">OSINT tool</p>
-        </div>
+        </div> -->
         
         <div class="input">
         <div class='in_div'>
