--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="headtitle">
-        <h1>Membantu Anda dengan cepat memeriksa dan mengumpulkan informasi tentang nama domain target.</h1>
+        <h1>Membantu memeriksa dan mengumpulkan informasi tentang nama domain target.</h1>
     </div>
   
     <div class='input'>
