--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
     <div class='input'>
         <div class='in_div'>
-        <input class="index_input" id="index_input" type="text" onchange="textch(this.value)" placeholder="Masukkan Nama Domain"/>
+        <input class="index_input" id="index_input" type="text" onchange="textch(this.value)" placeholder="Masukkan Nama Domain Yang Dicari Disini"/>
         </div>
     </div>
    
